<resources>
    <string name="app_name">Odev1</string>
    <string name="by_signing_in_i_agree_with_terms_of_use_and_privacy_policy">
        By signing in, I agree with <b><font color="black"> Terms of Use </font></b> and <b><font color="black"> Privacy Policy</font></b></string>
    <string name="best_holiday_deals">Best holiday deals</string>
    <string name="find_deals_for_any_season_from_cosy_country_homes_to_city_flats">Find deals for any season from cosy country homes to city flats</string>
    <string name="get_started">Get started</string>
    <string name="explore_as_guest">Explore as guest</string>
    <string name="woman">Woman</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_enter_your_account_here">Please enter your account here</string>
    <string name="email_or_phone_number">Email or phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google">Google</string>
    <string name="don_t_have_any_account">Don’t have any account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_start_here">Let’s start here</string>
    <string name="fill_in_your_details_to_begin">Fill in your details to begin</string>
    <string name="fullname">Fullname</string>
    <string name="cristian">Cristian</string>
    <string name="e_mail">E-mail</string>
    <string name="cristiandeb13_gmail_com">Cristiandeb13@gmail.com</string>
    <string name="_123456789">123456789</string>
    <string name="or">or</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="connect_with_google">Connect with Google</string>
</resources>